--- a/html/custom.html
+++ b/html/custom.html
@@ -22,37 +22,36 @@
 <div>
 <!-- navbar-->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="../index.html">Lucky Box</a>
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+        <a class="navbar-brand" href="../index.html">Lucky Box</a>
 
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../html/custom.html">Boxes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../html/contact.html">Contact</a>
+                </li>
+                <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Login
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="../html/Login.html">Login</a>
+                        <a class="dropdown-item" href="../html/register.html">Register</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="../html/custom.html">Boxes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../html/contact.html">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Login
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="../html/Login.html">Login</a>
-                    <a class="dropdown-item" href="../html/register.html">Register</a>
-
-                </div>
-            </li>
-        </ul>
-    </div>
-</nav>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <!-- featurette-->
 
@@ -145,7 +144,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-                        <img class="img-fluid" src="../img/customBOX2.png" width="300" >
+                        <img class="img-fluid" src="../img/customBOX3.png" width="300" >
                         <h2>Big Box</h2>
                         <p>A large sized box containing a large amount of items from all choice options </p>
                         <p><a class="btn btn-secondary" href="#2ndStep" role="button">pick this one &raquo;</a></p>
@@ -159,9 +158,9 @@
 
 <!-- ///////////////////////////////////BEGINNING OF items -->
 
-<div class="bigcontain">
-<div class="ml-3">
-    <div class="container row steptitle">
+<div class="bgcontainer">
+<div class="mt-4 pb-3">
+    <div class="container row steptitle pt-5">
         <h2 class="step stepcount"> Step 3</h2>
         <h2 class="stepInfo">Select your items!</h2>
     </div>
