--- a/html/custom.html
+++ b/html/custom.html
@@ -175,8 +175,11 @@
     <div class="row pt-3" id="movierow">
         <div class="hover01">
         <figure> <img src="../img/moviegadget1.jpg" width="200" height="200"> </figure>
-            <div>
-                <label><input type="checkbox" /> baby yoda</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">baby yoda </span>
+                </label>
             </div>
         </div>
         <div class="hover01">
